@@ -165,7 +165,7 @@ bool CSkinInfo::Check(const CStdString& strSkinDir)
 CStdString CSkinInfo::GetSkinPath(const CStdString& strFile, RESOLUTION *res)
 {
   // first try and load from the current resolution's directory
-  *res = g_guiSettings.m_LookAndFeelResolution;
+  *res = g_graphicsContext.GetVideoResolution();
   CStdString strPath;
   strPath.Format("%s%s\\%s", m_strBaseDir.c_str(), GetDirFromRes(*res).c_str(), strFile.c_str());
   if (CFile::Exists(strPath))
